--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "env": {
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["eslint:recommended", "standard", "prettier"],
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2020
