--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "description": "My Moleculer-based microservices project",
   "dependencies": {
     "avsc": "^5.4.19",
+    "chess.js": "^0.10.3",
     "moleculer": "^0.14.0",
-    "nats": "^1.3.2"
+    "nats": "^1.3.2",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sort-keys-fix": "^1.1.0",
+    "eslint-plugin-standard": "^4.0.1",
     "gitmoji-cli": "^3.2.3",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
@@ -24,12 +31,12 @@
     "test": "jest",
     "coverage": "jest --coverage --no-cache --silent",
     "coverage:ci": "npm run coverage -- --maxWorkers 4",
-    "debug": "node --inspect node_modules/.bin/moleculer-runner -- --config config/moleculer.js --repl --hot src/services",
+    "debug": "node --inspect node_modules/.bin/moleculer-runner -- --config config/moleculer.js --repl --hot ./services/**/*.service.js",
     "format": "npm run format:ci -- --write",
     "format:ci": "prettier -l \"**/*.+(js|json|md|yml)\"",
     "lint": "eslint \"./**/*.js\" --fix",
     "lint:ci": "npm run lint",
-    "serve": "moleculer-runner --config config/moleculer.js ./services",
+    "serve": "moleculer-runner --config config/moleculer.js ./services/**/*.service.js",
     "prestart": "docker-compose up --build -d",
     "start": "npm run serve -- --repl --hot",
     "stop": "docker-compose down",
