--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "author": "Adrian de la Rosa <adrian@delarosab.me>",
-  "description": "UCI Interface",
+  "description": "A TypeScript-based Universal Chess Interface (UCI) for integrating chess engines with graphical user interfaces (GUIs).",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.0.0",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.7",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.3"
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^22.13.5",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "@vitest/coverage-v8": "^3.0.6",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-import-x": "^4.6.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.3.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.24.1",
+    "vitest": "^3.0.6"
   },
   "files": [
     "/dist/",
@@ -32,13 +37,22 @@
   "repository": "mormubis/uci",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --ignore-path .gitignore \"src/**/*.+(js|json|md|ts|yml)\" --write",
-    "lint": "eslint \"src/**/*.ts\" --fix",
-    "prepare": "npm run build",
-    "test": "jest",
-    "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch"
+    "format": "pnpm run format:ci --write",
+    "format:ci": "prettier --ignore-unknown --list-different \"**/*\"",
+    "lint": "pnpm run lint:style && pnpm run lint:types",
+    "lint:ci": "pnpm run lint:style --max-warnings 0 && pnpm run lint:types",
+    "lint:style": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "lint:types": "tsc --noEmit --project tsconfig.json",
+    "prepare": "pnpm run build",
+    "test": "pnpm grammar:compile && vitest run",
+    "test:coverage": "pnpm run test --coverage",
+    "test:watch": "pnpm run test --watch"
   },
+  "type": "module",
   "types": "dist/index.d.ts",
-  "version": "2.1.4"
+  "version": "2.1.4",
+  "dependencies": {
+    "emittery": "^1.1.0",
+    "zod": "^3.24.2"
+  }
 }
